# graph-neural-network-sandbox

./: Pipfile
dgl/: Makefile  Pipfile
dgl/tutorial/: 01_node-classification-with-dgl.ipynb  02_how-dose-dgl-represents-a-graoh.ipynb  03_write-your-own-gnn-module.ipynb
lightning/: Makefile  Pipfile
lightning/tutorial/getting-started/: main.ipynb
lightning/tutorial/getting-started/lightning_logs/version_0/: metrics.csv
lightning/tutorial/getting-started/lightning_logs/version_0/checkpoints/: epoch=0-step=100.ckpt
lightning/tutorial/sandbox/: main.py
lightning/tutorial/sandbox/model/: gat.py
pyg/: Makefile  hello.py  pyproject.toml
pyg/daemon/: .tool-versions  Makefile  README.md  pyproject.toml  simple_conv.py
pyg/daemon/benchmark/: Makefile  _sample.py  main.py
pyg/daemon/benchmark/libs/: __init__.py
pyg/daemon/models/base/: __init__.py
pyg/daemon/sampler/: loader.py  sampler.py  utils.py
pyg/daemon/sampler/cython/: Makefile  README.md  cython_fn.c  cython_fn.cpp  cython_fn.html  cython_fn.pyx  setup.py
pyg/daemon/tests/: conftest.py  test_loader.py  test_sampler.py  test_utils.py
pyg/loader/notebook/: linkloader.ipynb
pyg/src/analysis/: dataset.ipynb  random_link_split.ipynb
pyg/tutorial/: hierarchical_neighborhood_sampling.ipynb
src/analysis/: dataset.ipynb
src/data/: dataset.py
src/models/: embedding.py
