[project]
name = "pyg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "torch==2.5.1",
  "torch_geometric==2.6.1",
  "pyg_lib",
  "torch_scatter",
  "torch_sparse",
  "torch_cluster",
  "torch_spline_conv",
  "numpy~=2.1.3",
  "polars~=1.13.0",
]

[tool.uv]
dev-dependencies = [
  "notebook~=7.2.2",
  "pytest~=8.3.2",
  "mypy~=1.13.0",
  "ipywidgets>=8.1.5",
  "ruff~=0.7.4",
]

[tool.uv.sources]
# from https://data.pyg.org/whl/torch-2.5.1+cpu.html
pyg_lib = [
  { url = "https://data.pyg.org/whl/torch-2.5.0%2Bcpu/pyg_lib-0.4.0%2Bpt25-cp312-cp312-macosx_14_0_universal2.whl", marker = "sys_platform == 'darwin'" },
  { url = "https://data.pyg.org/whl/torch-2.5.0%2Bcpu/pyg_lib-0.4.0%2Bpt25cpu-cp312-cp312-linux_x86_64.whl", marker = "sys_platform != 'darwin'" },        # dawin以外のplatformがdependencyに含まれるようで、指定が必要
]
torch_scatter = { url = "https://data.pyg.org/whl/torch-2.5.0%2Bcpu/torch_scatter-2.1.2-cp312-cp312-macosx_10_13_universal2.whl", marker = "sys_platform == 'darwin'" }
torch_sparse = { url = "https://data.pyg.org/whl/torch-2.5.0%2Bcpu/torch_sparse-0.6.18-cp312-cp312-macosx_11_0_universal2.whl", marker = "sys_platform == 'darwin'" }
torch_cluster = { url = "https://data.pyg.org/whl/torch-2.5.0%2Bcpu/torch_cluster-1.6.3-cp312-cp312-macosx_10_13_universal2.whl", marker = "sys_platform == 'darwin'" }
torch_spline_conv = { url = "https://data.pyg.org/whl/torch-2.5.0%2Bcpu/torch_spline_conv-1.2.2-cp312-cp312-macosx_10_13_universal2.whl", marker = "sys_platform == 'darwin'" }

[tool.ruff]
target-version = "py312"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
extend-select = ["I"]
