[project]
name = "daemon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy~=2.2.2", "polars~=1.21.0", "loguru~=0.7.3"]

[project.optional-dependencies]
cpu = ["torch==2.4.1", "torch_geometric==2.6.1"]
gpu = [
  "torch==2.4.1",
  "torch_geometric==2.6.1",
  "pyg_lib==0.4.0",
  "torch_cluster==1.6.3",
  "torch_scatter==2.1.2",
  "torch_sparse==0.6.18",
  "torch_spline_conv==1.2.2",
]

[dependency-groups]
dev = [
  "notebook~=7.3.2",
  "pytest~=8.3.4",
  "mypy~=1.15.0",
  "ipywidgets>=8.1.5",
  "Cython~=3.0.11",
  "pydantic~=2.10.6",
  "pydantic-settings~=2.7.1",
  "line-profiler~=4.2.0",
]
lint = ["ruff~=0.9.5"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "gpu" }]]
find-links = ["https://data.pyg.org/whl/torch-2.4.1+cu121.html"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu-mac", extra = "cpu", marker = "platform_system == 'macOS'" },
  { index = "pytorch-cpu", extra = "cpu", marker = "platform_system != 'macOS'" },
  { index = "pytorch-gpu", extra = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu-mac"
url = "https://pypi.python.org/simple"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pyg-gpu"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.ruff]
target-version = "py311"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
extend-select = ["I"]

[[tool.mypy.overrides]]
module = ['torch_geometric', 'torch_geometric.*', '.*']
ignore_missing_imports = true
